--- a/hillel-travel-service/pom.xml
+++ b/hillel-travel-service/pom.xml
@@ -42,5 +42,10 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>4.0.0</version>
+        </dependency>
     </dependencies>
 </project>
