--- a/hillel-travel-data/pom.xml
+++ b/hillel-travel-data/pom.xml
@@ -27,6 +27,10 @@
             <artifactId>spring-context</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
+        <dependency>
             <groupId>ua.ithillel.travelapp</groupId>
             <artifactId>hillel-travel-common</artifactId>
             <version>1.0-SNAPSHOT</version>
