--- a/hillel-travel-service/pom.xml
+++ b/hillel-travel-service/pom.xml
@@ -32,6 +32,13 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>ua.ithillel.travelapp</groupId>
+            <artifactId>hillel-travel-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+            <type>test-jar</type>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
