--- a/hillel-travel-data/pom.xml
+++ b/hillel-travel-data/pom.xml
@@ -40,13 +40,13 @@
             <artifactId>hillel-travel-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>ua.ithillel.travelapp</groupId>
-            <artifactId>hillel-travel-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>test-jar</type>
-            <scope>test</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>ua.ithillel.travelapp</groupId>-->
+<!--            <artifactId>hillel-travel-common</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--            <type>test-jar</type>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-core</artifactId>
