--- a/hillel-travel-service/src/main/resources/service-config.properties
+++ b/hillel-travel-service/src/main/resources/service-config.properties
@@ -1,3 +1,4 @@
-minio.endpoint=http://localhost:9000
+minio.endpoint=${MINIO_URL:http://localhost:9000}
 minio.accessKey=${MINIO_ACCESS_KEY}
 minio.secretKey=${MINIO_SECRET_KEY}
+minio.bucketName=${MINIO_BUCKET_NAME}
