--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <slf4j.version>2.0.9</slf4j.version>
         <log4j.version>2.20.0</log4j.version>
         <aspectj.version>1.9.20.1</aspectj.version>
+        <junit.version>5.9.1</junit.version>
     </properties>
 
     <dependencyManagement>
@@ -172,7 +173,7 @@
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-api</artifactId>
-                <version>5.10.0</version>
+                <version>${junit.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
