--- a/hillel-travel-service/pom.xml
+++ b/hillel-travel-service/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>hillel-travel-data</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>ua.ithillel.travelapp</groupId>
+            <artifactId>hillel-travel-security</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>ua.ithillel.travelapp</groupId>-->
 <!--            <artifactId>hillel-travel-common</artifactId>-->
