--- a/hillel-travel-web-boot/src/main/resources/application.yaml
+++ b/hillel-travel-web-boot/src/main/resources/application.yaml
@@ -28,3 +28,6 @@ minio:
   accessKey: ${MINIO_ACCESS_KEY}
   secretKey: ${MINIO_SECRET_KEY}
   bucketName: ${MINIO_BUCKET_NAME}
+
+jwt:
+  secretKey: ${JWT_SECRET_KEY:}
