--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>hillel-travel-service</module>
         <module>hillel-travel-web</module>
         <module>hillel-travel-web-boot</module>
+        <module>hillel-travel-security</module>
     </modules>
 
     <properties>
@@ -38,6 +39,7 @@
         <log4j.version>2.20.0</log4j.version>
         <aspectj.version>1.9.20.1</aspectj.version>
         <junit.version>5.9.1</junit.version>
+        <jjwt.version>0.11.5</jjwt.version>
     </properties>
 
     <dependencyManagement>
@@ -58,6 +60,11 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
+                <version>3.1.3</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
                 <version>3.1.3</version>
             </dependency>
             <dependency>
@@ -158,6 +165,23 @@
                 <artifactId>aspectjrt</artifactId>
                 <version>${aspectj.version}</version>
 <!--                <scope>runtime</scope>-->
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-api</artifactId>
+                <version>${jjwt.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-impl</artifactId>
+                <version>${jjwt.version}</version>
+                <scope>runtime</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-jackson</artifactId>
+                <version>${jjwt.version}</version>
+                <scope>runtime</scope>
             </dependency>
             <dependency>
                 <groupId>org.aspectj</groupId>
